--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "@google-cloud/debug-agent": "^4.0.0",
-    "jwt-simple": "^0.5.6"
+    "jwt-simple": "^0.5.6",
+    "request": "^2.69.0"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.3.0",
