--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@google-cloud/debug-agent": "^4.0.0",
+    "@google-cloud/firestore": "2.2.4",
     "jwt-simple": "^0.5.6",
+    "moment": "^2.24.0",
     "request": "^2.69.0"
   },
   "devDependencies": {
